2005-06-03  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.h: Fix interface routines with complex conjugate.
	* interface.cpp: Ditto.

2005-05-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* S_scheme_fields.h: Fix Planar plotting.

2005-05-27  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.h: Add interface routines with complex conjugate.
	* interface.cpp: Ditto.
	* camfr_wrap.cpp: Add BlochSection.

2005-04-06  Peter Vandersteegen  <Peter.Vandersteegen@UGent.be>

	* camfr_wrap.cpp: Fix get_kt() and set_kt().

2005-03-01  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry3d.py: Implement add_flipped.

2005-02-18  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Add L_anis solver.

2005-02-08  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* bloch.cpp: Better detection of fw/bw modes.
	* infstack.cpp: Ditto.

2005-02-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* material.h: Add BiaxialMaterial.
	* camfr_wrap.cpp: Ditto.

2005-02-02  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* bloch.h: Add support for BlochStacks inside of other Stacks.
	* bloch.cpp: Ditto.
	* interface.h: Ditto.
	* interface.cpp: Ditto.
	* stack.cpp: Ditto.
	* stack.h: Ditto.
	* camfr_wrap.cpp: Ditto.

2005-01-28  Peter Debackere  <Peter.Debackere@UGent.be>

	* camfr_wrap.cpp: Add switches for ASR solver.
	* defs.h: Ditto.

2004-10-18  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry.py: Add switch to calculate average eps and 1/eps.

2004-08-18  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add switch for Davy.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2004-07-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.py: Add 'set_keep_all_estimates'.

2004-06-10  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry3d.py: Fix rounding errors.

2004-06-03  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* field.cpp: Don't propagate inside a BlochStack.
	* icache.cpp: Don't make flipped scatterers for BlochStacks.
