@@ -1,3 +1,9 @@
+2005-06-13  Peter Debackere  <Peter.Debackere@UGent.be>
+
+	* camfr_wrap.cpp: Add ASR solver.
+	* defs.h: Ditto.
+	* defs.cpp: Ditto.
+
 2005-06-03  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* interface.h: Fix interface routines with complex conjugate.
